# singleuser-activitypub-server

./: .env_template  Cargo.toml
.cargo/: config
src/: env.rs  main.rs
src/api/: actor.rs  finger.rs  mod.rs
src/endpoints/: actor.rs  inbox.rs  mod.rs  well_known.rs
src/endpoints/actor/: mod.rs
src/endpoints/inbox/: mod.rs  types.rs
src/endpoints/inbox/actions/: delete.rs  follow.rs  mod.rs  undo.rs
src/endpoints/well_known/: mod.rs
