[package]
edition = "2021"
name = "single-activiypub-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.89"

tiny_http = "0.12.0"
url = "2.3.1"
